--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,2 +1,141 @@
-<h1>About#index</h1>
-<p>Find me in app/views/about/index.html.erb</p>
+<h2>Biography</h2><%= link_to artworks_path, class: "btn2" do %>
+
+ <%= link_to home_path, class: "btn2" do %>
+    <button class="cta">
+    <span class="hover-underline-animation"> Home </span>
+    <svg
+      id="arrow-horizontal"
+      xmlns="http://www.w3.org/2000/svg"
+      width="23"
+      height="7"
+      viewBox="0 0 46 16"
+    >
+      <path
+        id="Path_10"
+        data-name="Path 10"
+        d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+        transform="translate(30)"
+      ></path>
+    </svg>
+  </button><% end %>
+
+  &nbsp;
+
+  &nbsp;
+
+  <button class="cta">
+  <span class="hover-underline-animation"> Artwork </span>
+  <svg
+    id="arrow-horizontal"
+    xmlns="http://www.w3.org/2000/svg"
+    width="23"
+    height="7"
+    viewBox="0 0 46 16"
+  >
+    <path
+      id="Path_10"
+      data-name="Path 10"
+      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+      transform="translate(30)"
+    ></path>
+  </svg>
+</button><% end %>
+
+&nbsp;
+
+&nbsp;
+
+<%= link_to books_path, class: "btn2" do %>
+  <button class="cta">
+  <span class="hover-underline-animation"> Books </span>
+  <svg
+    id="arrow-horizontal"
+    xmlns="http://www.w3.org/2000/svg"
+    width="23"
+    height="7"
+    viewBox="0 0 46 16"
+  >
+    <path
+      id="Path_10"
+      data-name="Path 10"
+      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+      transform="translate(30)"
+    ></path>
+  </svg>
+</button><% end %>
+
+<div class= "biography">
+"Naturally, it's unusual for a woman artist to have her works collected and/or exhibited by 33 museums in 12 countries. However, what struck her as odd was that in 1987, when Guggenheim curator Lisa Dennison approached her for an installation of her Hieroglyphics, there were 34 male artists collected alongside her, making her the only woman.
+
+She grew up in America within a traditional American family but pursued her studies at an experimental university and the Center For Creative Studies in Detroit. She then relocated to Milan, Italy, where she began her painting journey. In 1977, the city of Milan invited her to exhibit her first major installation, Soft Patterns, in a solo show at the museum Palazzo Arengario. Her experiences of living in five countries and speaking four languages served as a wonderful inspiration for her art.
+
+One of the most unusual aspects of her history was her first book, Art Without Rejection, which questioned many practices in the art world and was utilized in over 200 universities.
+
+Born in Minneapolis, she was the daughter of a farmer's son and a mother from a historic American family. She had two brothers and one sister. For more detailed information, her latest book, Heaven Is Silent: An Artist's Memoir, will be available on Amazon in May 2024."
+</div>
+
+<h6>contact: Sheila8383@aol.com</h6>
+
+<h2>Exibitions</h2>
+<div class= "ul1">
+<ul>
+<li>Palazzo Arengario, Milan, Italy 1977</li>
+  <li>Utah Museum of Fine Art, Salt Lake City 1987</li>
+  <li>Institute of Contemporary Art, ICA, London, UK 1988</li>
+  <li>Maier Museum, Lynchburg, Virginia 1986</li>
+  <li>Nexus Foundation For Today's Art, Philadelphia 1986</li>
+  <li>Milliken & Parsons Art Center, South Carolina 1986</li>
+  <li>University of Mississippi Museum 1986</li>
+  <li>Selected Alumni for CCS, Preston Burke Gallery 1989</li>
+  <li>Monumental Works, this show toured France in 1989</li>
+  <li>Grand Palais, Young Painters 1983, 84, 85, 86 & 87 Paris, France</li>
+  <li>Musée de Luxembourg, Women Artists 1981, 82, 83, 84 Paris</li>
+  <li>Municipal Museum, Bordeaux, chosen from the Grand Palais 1983</li>
+  <li>Pavillon Des Arts; Women Artists, Paris, France 1985</li>
+  <li>Gulbenkian Museum of Modern Art, Lisbon, Portugal 1991</li>
+  <li>Fyns Kunst Museum Odensea, Denmark 1991</li>
+  <li>Art Gallery of Greater Victoria, Canada 1990</li>
+  <li>Jacksonville University Museum, Florida 1990</li>
+  <li>McAllen International Museum, Texas 1990</li>
+  <li>Midwest Museum of American Art, Indiana 1996</li>
+  <li>Downey Museum of Art, California 1996</li>
+  <li>Saco Museum, Maine USA 1996</li>
+  <li>The Paper Museum, Tokyo, Japan 2007</li>
+  <li>Museum of Modern Art, at Biblioteca Alexandria, Egypt 2007</li>
+  <li>Kyoto Institute Museum Kyoto, Japan 2007</li>
+  <li>Museum of Artist Books, Baku, Azerbaijan 2009</li>
+</ul>
+</div>
+
+
+
+<h2>Museum Collections</h2>
+<div class= "ul2">
+<ul>
+<li>Solomon Guggenheim Museum, New York City 1987</li>
+  <li>The Victoria & Albert Museum Library, London UK 2007</li>
+  <li>The Paper Museum, Tokyo, Japan 2007</li>
+  <li>Kyoto Institute Kyoto, Japan 2007</li>
+  <li>Museum of Artist Books, Baku, Azerbaijan 2009</li>
+  <li>Musée de Art Moderne, Saint Etienne, France 1993</li>
+  <li>Supreme Court USA (in the chambers of Ruth Bader Ginsberg)</li>
+  <li>Utah Museum of Fine Art, Salt Lake City, 1987</li>
+  <li>Museum of Modern Art, Biblioteca, Alexandria, Egypt 2007</li>
+  <li>Davis Museum at Wellesley University, Boston 1995</li>
+  <li>Harrison Museum of Art, University of Utah, Logan, Utah 1998</li>
+  <li>Fyns Kunstmuseum, Odensea, Denmark 1992</li>
+  <li>Maier Museum, Lynchburg, Virginia USA 1986</li>
+  <li>Downey Museum of Art, California 1996</li>
+  <li>Museum of Art & Science, Daytona Beach, Florida 1996</li>
+  <li>Midwest Museum of Art, Indiana, 1996</li>
+  <li>Museo D'Arte Contemporaneo, Castellôn, Spain 1989</li>
+  <li>Galerie D'Art Contemporain, Chamalières, France 1991</li>
+  <li>Museo D'Arte Contemporaneo, Castellôn, Spain</li>
+  <li>Galerie D'Art Contemporain, Chamalières, France 1991</li>
+  <li>Art Gallery of Greater Victoria, Canada 1990</li>
+  <li>Jacksonville University Museum, Florida, 1990</li>
+  <li>McAllen International Museum, Texas1990</li>
+  <li>Jacksonville University Museum, Florida 1990</li>
+  <li>McAllen International Museum, Texas 1990</li>
+</ul>
+</div>
