--- a/app/assets/stylesheets/books.css
+++ b/app/assets/stylesheets/books.css
@@ -12,76 +12,85 @@
   position: relative;
   border-radius: 10px;
   width: 390px;
-  height: 420px;
+  height: auto;
+  min-height: 420px;
   background-color: rgb(245, 238, 235);
-  -webkit-box-shadow: 1px 1px 12px #000;
-  box-shadow: 1px 1px 12px #000;
-  -webkit-transform: preserve-3d;
-  -ms-transform: preserve-3d;
+  box-shadow: 1px 1px 12px #615f5f;
   transform: preserve-3d;
-  -webkit-perspective: 2000px;
   perspective: 2000px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   color: #000;
+  overflow: hidden;
 }
-
 
 .book_title {
   margin: 0;
-  font-size: 20px;
+  font-size: 17px;
   color: #252525;
   font-weight: 700;
   font-family: "Comic Neue", cursive;
 }
+
 .content {
-  margin-left: 40px;
+  padding: 20px 20px 20px 40px;
   font-size: 15px;
   color: #444343;
   font-weight: 500;
-  line-height: 1.5;
+  line-height: 1.3;
   font-family: "Comic Neue", cursive;
 }
 
-
 .cover {
   top: 0;
+  left: 0;
   position: absolute;
   background-color: white;
   width: 100%;
   height: 100%;
   border-radius: 10px;
   cursor: pointer;
-  -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  -webkit-transform-origin: 0;
-  -ms-transform-origin: 0;
   transform-origin: 0;
-  -webkit-box-shadow: 1px 1px 12px #000;
   box-shadow: 1px 1px 12px #000;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
 }
 
-.book:hover .cover {
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-  -webkit-transform: rotatey(-80deg);
-  -ms-transform: rotatey(-80deg);
-  transform: rotatey(-80deg);
+.cover img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
+.book:hover .cover {
+  transition: all 0.5s;
+  transform: rotateY(-80deg);
+}
+
+.cta {
+  margin-top: 20px;
+}
+
+@media (max-width: 768px) {
+  .book_container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .book {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .cover {
+    width: 100%;
+  }
+
+  .content {
+    margin-left: 15px;
+  }
+}
