--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,93 +1,71 @@
 <h2>Books</h2>
 <div class="book_container">
 
-<div class="book">
+  <div class="book">
     <div class="content">
-      <p class="book_title">HEAVEN IS SILENT  2024
-  </p>
+      <p class="book_title">HEAVEN IS SILENT</p>
       <p>
-  Critics say “The best writings about artists are always autobiographical.” In the case of women artists they're also essential if any trace of our art is to remain. This book is a personal reminisce of my work and life.  It's a much more in-depth testimony of my adventures than has ever been published before. It includes an interplay of narrative, letters, critiques and photographs. Critics have said my former books are “like a conversation with the artist”.
+        Critics say “The best writings about artists are always autobiographical.” In the case of women artists they're also essential if any trace of our art is to remain. This book is a personal reminisce of my work and life. It's a much more in-depth testimony of my adventures than has ever been published before. It includes an interplay of narrative, letters, critiques and photographs. Critics have said my former books are “like a conversation with the artist”.
       </p>
     </div>
     <div class="cover">
-       <%= image_tag "Heaven is Silent.png", alt: "book", width: 370 %>
-         </div>
-   </div>
+      <%= image_tag "Heaven is Silent.png", alt: "book" %>
+    </div>
+  </div>
 
-<div class="book">
+  <div class="book">
     <div class="content">
-      <p class="book_title">ART & CREAKY BONES  2019
-  </p>
+      <p class="book_title">ART & CREAKY BONES</p>
       <p>
-This book won 6 literary awards in the categories, Art, Aging and Inspiration. It's goal is to help seniors find a vibrant, active, healthier life as they get older. The secret, scientists say, is finding a passion for something creative that can be a real exciting part of life. It's a colorful, cheerful, book that can bring comfort and motivation to people of any age. If you would like to read this Art & Creaky Bones it can be found at Amazon with this link.
-  <%= link_to "https://www.amazon.com/dp/1729874630/ref=cm_sw_em_r_mt_dp_i13rFbKFA9J8X", class: "btn2" do %>
+        This book won 6 literary awards in the categories, Art, Aging and Inspiration. It's goal is to help seniors find a vibrant, active, healthier life as they get older. The secret, scientists say, is finding a passion for something creative that can be a real exciting part of life. It's a colorful, cheerful, book that can bring comfort and motivation to people of any age. If you would like to read this Art & Creaky Bones it can be found at Amazon with this link.
+        <br><br>
+        <%= link_to "https://www.amazon.com/dp/1729874630/ref=cm_sw_em_r_mt_dp_i13rFbKFA9J8X", class: "btn2" do %>
+          <button class="cta">
+            <span class="hover-underline-animation">Buy on Amazon</span>
+            <svg id="arrow-horizontal" xmlns="http://www.w3.org/2000/svg" width="23" height="7" viewBox="0 0 46 16">
+              <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" transform="translate(30)"></path>
+            </svg>
+          </button>
+        <% end %>
+      </p>
+    </div>
+    <div class="cover">
+      <%= image_tag "Art & Creaky bonesJPG.JPG", alt: "book" %>
+    </div>
+  </div>
+
+  <div class="book">
+    <div class="content">
+      <p class="book_title">ART WITHOUT REJECTION</p>
+      <p>
+        Used in 200 universities, questions harmful practices in art and gives original alternatives. It has inspired many artists and teachers. Here are two examples. I generally whip right through a book, but Art Without Rejection provokes thought to such a degree that each paragraph requires me to sit back and contemplate. The book fairly whistles! She has such a forceful voice and is so forthright. I will continue to savor this book as I would a kilo of Beluga, enough to enrich the day and digest what I have consumed. Joan Messner, New York City
+        Two months ago, Art Without Rejection sang to me and I picked it up off the shelf at the Art Center. It has made a profound change in my life, practice and perspective. It's a guiding light for artists. My own paintings have been profoundly influenced. I am drinking her words of nourishment and strength. Ezguel Olvera, California
+      </p>
+    </div>
+    <div class="cover">
+      <%= image_tag "Capture d'écran 2024-03-28 093835.png", alt: "book" %>
+    </div>
+  </div>
+
+</div>
+
+<div>
+  <%= link_to artworks_path, class: "btn2" do %>
     <button class="cta">
-      <span class="hover-underline-animation">Buy on Amazon</span>
+      <span class="hover-underline-animation">Artwork</span>
       <svg id="arrow-horizontal" xmlns="http://www.w3.org/2000/svg" width="23" height="7" viewBox="0 0 46 16">
         <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" transform="translate(30)"></path>
       </svg>
     </button>
   <% end %>
-      </p>
-    </div>
-    <div class="cover">
-    <%= image_tag "Art & Creaky bonesJPG.JPG", alt: "book", width: 380 %>
-          </div>
-   </div>
-
-<div class="book">
-    <div class="content">
-      <p class="book_title">ART WITHOUT REJECTION 1993
-  </p>
-      <p>
-Art Without Rejection, used in more than 200 universities and sold in major museums around the world, questions harmful practices in the art and gives some wise and original alternatives.It has helped and inspired many artists and teachers.Here are two examples.I generally whip right through a book, but Art Without Rejection provokes thought to such a degree that each paragraph requires me to sit back and contemplate. The book fairly whistles! She has such a forceful voice and is so forthright. I will continue to savor this book as I would a kilo of Beluga, enough to enrich the day and digest what I have consumed.Joan Messner, New York City
-  Two months ago Art Without Rejection sang to me and I picked it up off the shelf at the Art Center. It has made a profound change in my life, practice and perspective. It's a guiding light for artists.  My own paintings and practice have been profoundly influenced. I am drinking her words of nourishment and strength. Ezguel Olvera, California      </p>
-    </div>
-    <div class="cover">
-      <%= image_tag "Capture d'écran 2024-03-28 093835.png", alt: "book", width: 390 %>
-    </div>
-   </div>
-</div>
-
-
-  <%= link_to artworks_path, class: "btn2" do %>
-    <button class="cta">
-    <span class="hover-underline-animation"> Artwork </span>
-    <svg
-      id="arrow-horizontal"
-      xmlns="http://www.w3.org/2000/svg"
-      width="23"
-      height="7"
-      viewBox="0 0 46 16"
-    >
-      <path
-        id="Path_10"
-        data-name="Path 10"
-        d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
-        transform="translate(30)"
-      ></path>
-    </svg>
-  </button><% end %>
-
   &nbsp;
-
   &nbsp;
-
   <%= link_to about_path, class: "btn2" do %>
     <button class="cta">
-    <span class="hover-underline-animation"> Biography </span>
-    <svg
-      id="arrow-horizontal"
-      xmlns="http://www.w3.org/2000/svg"
-      width="23"
-      height="7"
-      viewBox="0 0 46 16"
-    >
-      <path
-        id="Path_10"
-        data-name="Path 10"
-        d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
-        transform="translate(30)"
-      ></path>
-    </svg>
-  </button><% end %>
+      <span class="hover-underline-animation">Biography</span>
+      <svg id="arrow-horizontal" xmlns="http://www.w3.org/2000/svg" width="23" height="7" viewBox="0 0 46 16">
+        <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" transform="translate(30)"></path>
+      </svg>
+    </button>
+  <% end %>
+</div>
