--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,13 +34,46 @@
         font-style: normal;
        color: #99582a
       }
+      /* Dropdown Button */
+    .dropdown {
+      position: absolute;
+      top: 20px;
+      right: 60px;
 
-      
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+
+    .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+
+    .dropdown-content a:hover {
+      background-color: #f1f1f1;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+
+
     </style>
   </head>
 
   <body>
     <h1>Sheila Reid</h1>
+     <%= render partial: 'shared/dropdown_menu' %>
     <%= yield %>
   </body>
 </html>
