--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,14 +1,59 @@
 .home {
+  position: relative;
   padding: 20px;
   border-radius: 5px;
   margin-bottom: 20px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 20px rgba(82, 81, 81, 0.2);
   font-family: "Comic Neue", cursive;
-  background-color: #fcf2d9e1 ;
+  background-color: #f3efec1a;
+  color: #153a5cd5;
+}
+
+.home-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.home-image {
+  flex: 1;
+  margin-right: 20px;
+}
+
+.home-image img {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.home-text {
+  flex: 2;
 }
 
 h5 {
-  font-size: 2.0em;
-  color: #432818;
+  font-size: 1.6em;
   margin: 0;
+}
+
+.btn2 {
+  margin-top: 10px;
+}
+
+
+@media (max-width: 768px) {
+  .home-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .home-image {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .home-text {
+    text-align: center;
+    font-size: 0.9em;
+  }
 }
