--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,69 +1,5 @@
-<h2>Biography</h2><%= link_to artworks_path, class: "btn2" do %>
-
- <%= link_to home_path, class: "btn2" do %>
-    <button class="cta">
-    <span class="hover-underline-animation"> Home </span>
-    <svg
-      id="arrow-horizontal"
-      xmlns="http://www.w3.org/2000/svg"
-      width="23"
-      height="7"
-      viewBox="0 0 46 16"
-    >
-      <path
-        id="Path_10"
-        data-name="Path 10"
-        d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
-        transform="translate(30)"
-      ></path>
-    </svg>
-  </button><% end %>
-
-  &nbsp;
-
-  &nbsp;
-
-  <button class="cta">
-  <span class="hover-underline-animation"> Artwork </span>
-  <svg
-    id="arrow-horizontal"
-    xmlns="http://www.w3.org/2000/svg"
-    width="23"
-    height="7"
-    viewBox="0 0 46 16"
-  >
-    <path
-      id="Path_10"
-      data-name="Path 10"
-      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
-      transform="translate(30)"
-    ></path>
-  </svg>
-</button><% end %>
-
-&nbsp;
-
-&nbsp;
-
-<%= link_to books_path, class: "btn2" do %>
-  <button class="cta">
-  <span class="hover-underline-animation"> Books </span>
-  <svg
-    id="arrow-horizontal"
-    xmlns="http://www.w3.org/2000/svg"
-    width="23"
-    height="7"
-    viewBox="0 0 46 16"
-  >
-    <path
-      id="Path_10"
-      data-name="Path 10"
-      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
-      transform="translate(30)"
-    ></path>
-  </svg>
-</button><% end %>
-
+<h2>Biography</h2>
+<h3>contact: Sheila8383@aol.com</h3>
 <div class= "biography">
 "Naturally, it's unusual for a woman artist to have her works collected and/or exhibited by 33 museums in 12 countries. However, what struck her as odd was that in 1987, when Guggenheim curator Lisa Dennison approached her for an installation of her Hieroglyphics, there were 34 male artists collected alongside her, making her the only woman.
 
@@ -74,7 +10,7 @@ One of the most unusual aspects of her history was her first book, Art Without R
 Born in Minneapolis, she was the daughter of a farmer's son and a mother from a historic American family. She had two brothers and one sister. For more detailed information, her latest book, Heaven Is Silent: An Artist's Memoir, will be available on Amazon in May 2024."
 </div>
 
-<h6>contact: Sheila8383@aol.com</h6>
+
 
 <h2>Exibitions</h2>
 <div class= "ul1">
@@ -139,3 +75,62 @@ Born in Minneapolis, she was the daughter of a farmer's son and a mother from a 
   <li>McAllen International Museum, Texas 1990</li>
 </ul>
 </div>
+<% content_for :dropdown_links do %>
+<%= link_to home_path, class: "btn2" do %>
+  <button class="cta">
+  <span class="hover-underline-animation"> Home </span>
+  <svg
+    id="arrow-horizontal"
+    xmlns="http://www.w3.org/2000/svg"
+    width="23"
+    height="7"
+    viewBox="0 0 46 16"
+  >
+    <path
+      id="Path_10"
+      data-name="Path 10"
+      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+      transform="translate(30)"
+    ></path>
+  </svg>
+</button>
+<% end %>
+ <%= link_to books_path, class: "btn2" do %>
+  <button class="cta">
+  <span class="hover-underline-animation"> Books </span>
+  <svg
+    id="arrow-horizontal"
+    xmlns="http://www.w3.org/2000/svg"
+    width="23"
+    height="7"
+    viewBox="0 0 46 16"
+  >
+    <path
+      id="Path_10"
+      data-name="Path 10"
+      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+      transform="translate(30)"
+    ></path>
+  </svg>
+</button>
+<% end %>
+<%= link_to artworks_path, class: "btn2" do %>
+  <button class="cta">
+  <span class="hover-underline-animation"> Artworks </span>
+  <svg
+    id="arrow-horizontal"
+    xmlns="http://www.w3.org/2000/svg"
+    width="23"
+    height="7"
+    viewBox="0 0 46 16"
+  >
+    <path
+      id="Path_10"
+      data-name="Path 10"
+      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+      transform="translate(30)"
+    ></path>
+  </svg>
+</button>
+<% end %>
+<% end %>
