--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -427,7 +427,27 @@ but because of the whole.”
 </div>
 </div>
 
-<%= link_to books_path, class: "btn2" do %>
+<% content_for :dropdown_links do %>
+<%= link_to home_path, class: "btn2" do %>
+  <button class="cta">
+  <span class="hover-underline-animation"> Home </span>
+  <svg
+    id="arrow-horizontal"
+    xmlns="http://www.w3.org/2000/svg"
+    width="23"
+    height="7"
+    viewBox="0 0 46 16"
+  >
+    <path
+      id="Path_10"
+      data-name="Path 10"
+      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+      transform="translate(30)"
+    ></path>
+  </svg>
+</button>
+<% end %>
+ <%= link_to books_path, class: "btn2" do %>
   <button class="cta">
   <span class="hover-underline-animation"> Books </span>
   <svg
@@ -444,12 +464,8 @@ but because of the whole.”
       transform="translate(30)"
     ></path>
   </svg>
-</button><% end %>
-
-&nbsp;
-
-&nbsp;
-
+</button>
+<% end %>
 <%= link_to about_path, class: "btn2" do %>
   <button class="cta">
   <span class="hover-underline-animation"> Biography </span>
@@ -467,4 +483,6 @@ but because of the whole.”
       transform="translate(30)"
     ></path>
   </svg>
-</button><% end %>
+</button>
+<% end %>
+<% end %>
