deleting arrows, mooving drop menu, some css, etc

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -52,58 +52,16 @@
 <%= link_to home_path, class: "btn2" do %>
   <button class="cta">
   <span class="hover-underline-animation"> Home </span>
-  <svg
-    id="arrow-horizontal"
-    xmlns="http://www.w3.org/2000/svg"
-    width="23"
-    height="7"
-    viewBox="0 0 46 16"
-  >
-    <path
-      id="Path_10"
-      data-name="Path 10"
-      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
-      transform="translate(30)"
-    ></path>
-  </svg>
 </button>
 <% end %>
  <%= link_to artworks_path, class: "btn2" do %>
   <button class="cta">
-  <span class="hover-underline-animation"> Artworkss </span>
-  <svg
-    id="arrow-horizontal"
-    xmlns="http://www.w3.org/2000/svg"
-    width="23"
-    height="7"
-    viewBox="0 0 46 16"
-  >
-    <path
-      id="Path_10"
-      data-name="Path 10"
-      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
-      transform="translate(30)"
-    ></path>
-  </svg>
+  <span class="hover-underline-animation"> Artworks </span>
 </button>
 <% end %>
 <%= link_to about_path, class: "btn2" do %>
   <button class="cta">
   <span class="hover-underline-animation"> Biography </span>
-  <svg
-    id="arrow-horizontal"
-    xmlns="http://www.w3.org/2000/svg"
-    width="23"
-    height="7"
-    viewBox="0 0 46 16"
-  >
-    <path
-      id="Path_10"
-      data-name="Path 10"
-      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
-      transform="translate(30)"
-    ></path>
-  </svg>
 </button>
 <% end %>
 <% end %>
