--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     .dropdown {
       position: absolute;
       top: 20px;
-      right: 60px;
+      left: 20px;
 
     }
 
@@ -49,11 +49,12 @@
       min-width: 160px;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
       z-index: 1;
+      left: 0;
     }
 
     .dropdown-content a {
       color: black;
-      padding: 12px 16px;
+      padding: 5px 10px;
       text-decoration: none;
       display: block;
     }
