--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -1,5 +1,5 @@
 
-<h2>Artwork</h2>
+<h2>Artworks</h2>
 
 <div class="container">
 <div class="col-md-6 mb-5">
@@ -20,12 +20,11 @@
     <p class="card__title"> PLENITUDE  scrolls 2016 - 2023
 </p>
     <p class="card__description">
-Scrolls were an ancient form of art. Mine are different though. In 2016 my husband was very ill and my time was spent caring for him. Maybe for comfort, I began cutting all my previous 20 years of drawings into pieces, probably because cutting them felt strangely therapeutic.
-     Then I glued random pieces onto photographic paper in different configurations. When
-finished, I had four hundred collages, and I began stitching some of them on to scrolls.
-Each scroll has six collages and each is a slightly different size, about  25 cm x 190 cm.
+Scrolls were an ancient form of art.Mine are different though.In 2016 my husband was very ill and my time was spent caring for him.Maybe for comfort, I began cutting all my previous 20 years of drawings into pieces, probably because cutting them felt strangely therapeutic.Then I glued random pieces onto photographic paper in different configurations. When
+finished, I had 400 collages, and I began stitching some of them on to scrolls.
+Each scroll has 6 collages and is a slightly different size, about  25 cm x 190 cm.
      Probably the most curious thing about Plenitude is that they're made from years of
-drawings which were almost all done when I was grieving for someone dear who
+drawings, which were almost all done when I was grieving for someone dear who
 had died. Their joyful appearance is rather strange because the drawings originated in such pain.
     </p>
   </div>
@@ -126,11 +125,11 @@ Solar lights are like personal signs of contemporary life, but somehow infused w
     <p class="card__title"> HIEROGLYPHICS 1982 – 1992
 </p>
     <p class="card__description">
-Using simple imprints of everyday objects, stripped away everything unnecessary and reduced the image to pure form. It was the combination of signs that made them look like you could read them, as if they might be some forgotten ancient language. When hung together, they seemed to acquire a meaning of their own.
+Using simple imprints of everyday objects, stripped away everything unnecessary and reduced the image to pure form.It was the combination of signs that made them look like you could read them,as if they might be some forgotten ancient language.When together,they seemed to acquire a meaning of their own.
 Diane Waldman, Deputy Director, Solomon Guggenheim Museum, New York City 1987
 “The Guggenheim is happy to have acquired your work Hieroglyphics and is proud to have it as part of it's collection...”
 Alexandra Tuttle
-“...Reid's work hints at the underlying unity in the universe. Some of her symbols resemble sacred languages... Yet in a curious alchemy that only art can achieve, Reid manages to transform the banal signs of our civilization's mediocrity into a powerful secret universe.”
+“Reid's work hints at the underlying unity in the universe.Her symbols resemble sacred languages...Yet in a curious alchemy that only art can achieve,Reid manages to transform the banal signs of our civilization's mediocrity,into a powerful secret universe.”
     </p>
   </div>
 </div>
