--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,7 +5,7 @@
     <div class="content">
       <p class="book_title">HEAVEN IS SILENT</p>
       <p>
-        Critics say “The best writings about artists are always autobiographical.” In the case of women artists they're also essential if any trace of our art is to remain. This book is a personal reminisce of my work and life. It's a much more in-depth testimony of my adventures than has ever been published before. It includes an interplay of narrative, letters, critiques and photographs. Critics have said my former books are “like a conversation with the artist”.
+        Critics say “The best writings about artists are always autobiographical.” In the case of women artists, they're also essential if any trace of our art is to remain. This book is a personal reminisce of my work and life. It's a much more in-depth testimony, of my adventures than has ever been published before. It includes an interplay of narrative, letters, critiques and photographs. Critics have said my former books are “like a conversation with the artist”.
       </p>
     </div>
     <div class="cover">
@@ -17,7 +17,7 @@
     <div class="content">
       <p class="book_title">ART & CREAKY BONES</p>
       <p>
-        This book won 6 literary awards in the categories, Art, Aging and Inspiration. It's goal is to help seniors find a vibrant, active, healthier life as they get older. The secret, scientists say, is finding a passion for something creative that can be a real exciting part of life. It's a colorful, cheerful, book that can bring comfort and motivation to people of any age. If you would like to read this Art & Creaky Bones it can be found at Amazon with this link.
+        This book won 6 literary awards in the categories, Art, Aging and Inspiration. It's goal is to help seniors find a vibrant, active, healthier life as they get older. The secret, scientists say, is finding a passion for something creative that can be a real exciting part of life. It's a colorful, cheerful, book that can bring comfort and motivation to people of any age. If you would like to read this, Art & Creaky Bones can be found at Amazon with this link.
         <br><br>
         <%= link_to "https://www.amazon.com/dp/1729874630/ref=cm_sw_em_r_mt_dp_i13rFbKFA9J8X", class: "btn2" do %>
           <button class="cta">
@@ -37,10 +37,11 @@
   <div class="book">
     <div class="content">
       <p class="book_title">ART WITHOUT REJECTION</p>
-      <p>
-        Used in 200 universities, questions harmful practices in art and gives original alternatives. It has inspired many artists and teachers. Here are two examples. I generally whip right through a book, but Art Without Rejection provokes thought to such a degree that each paragraph requires me to sit back and contemplate. The book fairly whistles! She has such a forceful voice and is so forthright. I will continue to savor this book as I would a kilo of Beluga, enough to enrich the day and digest what I have consumed. Joan Messner, New York City
-        Two months ago, Art Without Rejection sang to me and I picked it up off the shelf at the Art Center. It has made a profound change in my life, practice and perspective. It's a guiding light for artists. My own paintings have been profoundly influenced. I am drinking her words of nourishment and strength. Ezguel Olvera, California
-      </p>
+       <p>
+        Used in 200 universities, questions harmful practices in art and gives original alternatives. It has inspired many artists and teachers. Here are two examples: <p>"I generally whip right through a book, but Art Without Rejection provokes thought to such a degree that each paragraph requires me to sit back and contemplate. The book fairly whistles! She has such a forceful voice and is so forthright. I will continue to savor this book as I would a kilo of Beluga, enough to enrich the day and digest what I have consumed." Joan Messner, New York City</p>
+        <p>"Two months ago, Art Without Rejection sang to me and I picked it up off the shelf at the Art Center. It has made a profound change in my life, practice and perspective. It's a guiding light for artists. My own paintings have been profoundly influenced. I am drinking her words of nourishment and strength." Ezguel Olvera, California
+        </p>
+
     </div>
     <div class="cover">
       <%= image_tag "Art Without Rejection.jpg", alt: "book" %>
