--- a/app/assets/stylesheets/cards.css
+++ b/app/assets/stylesheets/cards.css
@@ -65,6 +65,7 @@
   font-weight: 500;
   line-height: 1.5;
   font-family: "Comic Neue", cursive;
+  font-weight: 505;
 }
 .card:hover svg {
   scale: 0;
@@ -97,7 +98,7 @@
     margin: 5px;
   }
   .card__content {
-    padding: 3px;
+    padding: 4px;
   }
 
   .card__title {
