--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,7 +9,7 @@
       </p>
     </div>
     <div class="cover">
-      <%= image_tag "Capture d'écran 2024-06-11 154832.png", alt: "book" %>
+      <%= image_tag "book cover (heaven).png", alt: "book" %>
     </div>
   </div>
 
