--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
     }
 
     .dropbtn:hover {
-      background-color: #3C6295;
+      background-color: ##3C6295;
     }
 
     .dropdown-content {
